--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
+    "modern-normalize": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -44,7 +49,8 @@
     "eslint": "^8.5.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.4",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "prop-types": "^15.8.0"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
