--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^4.0.0",
     "react-scripts": "5.0.0",
+    "react-scroll-to-top": "^1.0.8",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
